2012-12-17  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_sig/src/Image.cpp: include OpenCV translations
	of more pixel types in wrapIplImage [thanks Ilaria Gori]

2012-12-17  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* src/libYARP_sig/include/yarp/sig/SoundFile.h: Fix build with
	  YARP_CLEAN_API=ON
	* src/carriers/mjpeg_carrier/CMakeLists.txt: Enable test only
	  if YARP_COMPILE_TESTS is enabled
	* src/yarpscope/src/PortReader.cpp: Make connections persistent
	* src/yarpscope/src/PortReader.cpp: Fix bug when data is not
	  received
	* src/yarpscope/src/PortReader.cpp: Try to read data just once

2012-12-13  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/doc/persistent_connections.dox: show how to
	connect two ports persistently from code without an 
	intermediate topic.

	* src/doc/yarp_plugins.dox: document how runtime plugins
	currently work, warts and all.

2012-12-12  Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/RunReadWrite.cpp
	waitpid restored (no WNOHANG).
    RunWrite termination management changed.

2012-12-11  Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/RunProcManager.cpp
	WNOHANG option added to waitpid.

2012-12-11  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/idls/thrift/src/t_yarp_generator.cc: fix representation
	of vectors of enums, solution proposed by Elena
	[thanks Elena Ceseracciu]

	* src/idls/thrift/tests/demo/demo.thrift: add test for vectors
	of enums, problem reported by Elena [thanks Elena Ceseracciu]

2012-12-07  Marco Randazzo <marco.randazzo@iit.it>
	* src\libYARP_dev\include\yarp\dev\ServerInertial.h
	fixed issue on timestamps for devices which do not implement IPreciselyTimed
	[thanks Barry Ridge]
	
2012-11-27  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* bindings/yarp.i: add C# tweak for setTargetPeriod
	[thanks Stephane Lallee]

2012-11-23  Lorenzo Natale  <lorenzo.natale@iit.it>
	* tagging version 2.3.20
